--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@tsconfig/node14": "^1.0.0",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.31",
+    "@types/validator": "^13.1.3",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
   },
   "dependencies": {
     "@elastic/elasticsearch": "^7.11.0",
-    "express": "^4.17.1"
+    "@types/sequelize": "^4.28.9",
+    "express": "^4.17.1",
+    "sequelize": "^6.5.0",
+    "sequelize-cli": "^6.2.0"
   }
 }
