--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@elastic/elasticsearch": "^7.11.0",
     "@types/sequelize": "^4.28.9",
     "express": "^4.17.1",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^6.5.0",
     "sequelize-cli": "^6.2.0"
   }
