--- a/cs-web-app/package.json
+++ b/cs-web-app/package.json
@@ -38,9 +38,9 @@
   },
   "name": "cs-web-app",
   "version": "0.0.0",
-  "description": "Webcomponent cs-web-app following open-wc recommendations",
+  "description": "...",
   "author": "cs-web-app",
-  "license": "MIT",
+  "license": "LGPL",
   "dependencies": {
     "lit-html": "^1.3.0",
     "lit-element": "^2.4.0",
