--- a/cs-web-app/tsconfig.json
+++ b/cs-web-app/tsconfig.json
@@ -13,7 +13,7 @@
     "outDir": "out-tsc",
     "sourceMap": true,
     "inlineSources": true,
-    "rootDir": "./"
+    "rootDir": "./",
   },
   "include": ["**/*.ts"]
 }
