--- a/cs-web-app/package.json
+++ b/cs-web-app/package.json
@@ -24,8 +24,8 @@
     "@types/lodash-es": "^4.17.3",
     "@types/node": "13.11.1",
     "@types/chart.js": "^2.9.23",
-    "@types/hammerjs": "^2.0.36"
-
+    "@types/hammerjs": "^2.0.36",
+    "@rollup/plugin-commonjs": "^17.1.0"
   },
   "scripts": {
     "lint": "eslint --ext .ts,.html . --ignore-path .gitignore && prettier \"**/*.ts\" --check --ignore-path .gitignore",
@@ -42,8 +42,6 @@
   "author": "cs-web-app",
   "license": "LGPL",
   "dependencies": {
-    "lit-html": "^1.3.0",
-    "lit-element": "^2.4.0",
     "@kano/twemoji": "^1.0.0",
     "@manufosela/stars-rating": "^3.3.3",
     "@material/mwc-button": "^0.20.0",
@@ -54,7 +52,9 @@
     "@material/mwc-formfield": "^0.20.0",
     "@material/mwc-icon": "^0.20.0",
     "@material/mwc-icon-button": "^0.20.0",
+    "@material/mwc-list": "^0.20.0",
     "@material/mwc-menu": "^0.20.0",
+    "@material/mwc-select": "^0.20.0",
     "@material/mwc-snackbar": "^0.20.0",
     "@material/mwc-tab-bar": "^0.20.0",
     "@material/mwc-textarea": "^0.20.0",
@@ -65,7 +65,10 @@
     "hammerjs": "^2.0.8",
     "i18next-http-backend": "^1.0.16",
     "linkifyjs": "^2.1.9",
+    "lit-element": "^2.4.0",
     "lit-flexbox-literals": "0.0.7",
+    "lit-html": "^1.3.0",
+    "lodash-es": "^4.17.21",
     "pwa-helpers": "^0.9.1"
   },
   "eslintConfig": {
