--- a/cs-web-app/package.json
+++ b/cs-web-app/package.json
@@ -1,31 +1,31 @@
 {
   "devDependencies": {
-    "eslint": "^7.21.0",
-    "@open-wc/eslint-config": "^4.2.0",
-    "@typescript-eslint/parser": "^4.16.1",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "prettier": "^2.2.1",
-    "eslint-config-prettier": "^7.2.0",
-    "husky": "^4.3.8",
-    "lint-staged": "^10.5.4",
-    "@web/test-runner": "^0.12.15",
-    "@open-wc/testing": "^2.5.32",
     "@open-wc/building-rollup": "^1.9.4",
-    "deepmerge": "^4.2.2",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.40.0",
-    "@web/dev-server": "^0.1.8",
-    "concurrently": "^5.3.0",
-    "typescript": "^4.2.3",
-    "tslib": "^2.1.0",
+    "@open-wc/eslint-config": "^4.2.0",
+    "@open-wc/testing": "^2.5.32",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@types/chart.js": "^2.9.23",
     "@types/google.analytics": "0.0.40",
+    "@types/hammerjs": "^2.0.36",
     "@types/i18next": "^13.0.0",
     "@types/linkifyjs": "^2.1.3",
     "@types/lodash-es": "^4.17.3",
     "@types/node": "13.11.1",
-    "@types/chart.js": "^2.9.23",
-    "@types/hammerjs": "^2.0.36",
-    "@rollup/plugin-commonjs": "^17.1.0"
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
+    "@web/dev-server": "^0.1.8",
+    "@web/test-runner": "^0.12.15",
+    "concurrently": "^5.3.0",
+    "deepmerge": "^4.2.2",
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^7.2.0",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.40.0",
+    "tslib": "^2.1.0",
+    "typescript": "^4.2.3"
   },
   "scripts": {
     "lint": "eslint --ext .ts,.html . --ignore-path .gitignore && prettier \"**/*.ts\" --check --ignore-path .gitignore",
@@ -63,7 +63,7 @@
     "app-datepicker": "^4.1.0",
     "chart.js": "^2.9.3",
     "hammerjs": "^2.0.8",
-    "i18next-http-backend": "^1.0.16",
+    "i18next-http-backend": "^1.1.1",
     "linkifyjs": "^2.1.9",
     "lit-element": "^2.4.0",
     "lit-flexbox-literals": "0.0.7",
@@ -98,11 +98,6 @@
   "prettier": {
     "singleQuote": true,
     "arrowParens": "avoid"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.ts": [
