--- a/cs-web-app/package.json
+++ b/cs-web-app/package.json
@@ -1,9 +1,10 @@
 {
   "devDependencies": {
-    "@open-wc/building-rollup": "^1.9.4",
-    "@open-wc/eslint-config": "^4.2.0",
+    "@open-wc/building-rollup": "^1.0.0",
+    "@open-wc/eslint-config": "^4.0.0",
     "@open-wc/testing": "^2.5.32",
-    "@rollup/plugin-commonjs": "^17.1.0",
+    "@open-wc/testing-karma": "^3.0.0",
+    "@rollup/plugin-commonjs": "^14.0.0",
     "@types/chart.js": "^2.9.23",
     "@types/google.analytics": "0.0.40",
     "@types/hammerjs": "^2.0.36",
@@ -60,10 +61,12 @@
     "@material/mwc-textarea": "^0.20.0",
     "@material/mwc-textfield": "^0.20.0",
     "@material/mwc-top-app-bar": "^0.20.0",
+    "@rollup/plugin-typescript": "^8.2.0",
     "app-datepicker": "^4.1.0",
     "chart.js": "^2.9.3",
     "hammerjs": "^2.0.8",
     "i18next-http-backend": "^1.1.1",
+    "koa-proxies": "^0.11.0",
     "linkifyjs": "^2.1.9",
     "lit-element": "^2.4.0",
     "lit-flexbox-literals": "0.0.7",
