--- a/cs-web-app/package.json
+++ b/cs-web-app/package.json
@@ -66,6 +66,7 @@
     "@material/mwc-textarea": "^0.20.0",
     "@material/mwc-textfield": "^0.20.0",
     "@material/mwc-top-app-bar": "^0.20.0",
+    "@vaadin/vaadin-grid": "^6.0.1",
     "app-datepicker": "^4.1.0",
     "chart.js": "^2.9.3",
     "hammerjs": "^2.0.8",
