--- a/cs-web-app/package.json
+++ b/cs-web-app/package.json
@@ -60,6 +60,7 @@
     "@material/mwc-icon-button": "^0.20.0",
     "@material/mwc-list": "^0.20.0",
     "@material/mwc-menu": "^0.20.0",
+    "@material/mwc-radio": "^0.20.0",
     "@material/mwc-select": "^0.20.0",
     "@material/mwc-snackbar": "^0.20.0",
     "@material/mwc-tab-bar": "^0.20.0",
