--- a/cs-web-app/package.json
+++ b/cs-web-app/package.json
@@ -67,6 +67,7 @@
     "@material/mwc-textarea": "^0.20.0",
     "@material/mwc-textfield": "^0.20.0",
     "@material/mwc-top-app-bar": "^0.20.0",
+    "@types/socket.io-client": "^1.4.35",
     "@vaadin/vaadin-grid": "^6.0.1",
     "app-datepicker": "^4.1.0",
     "chart.js": "^2.9.3",
@@ -78,7 +79,9 @@
     "lit-flexbox-literals": "0.0.7",
     "lit-html": "^1.3.0",
     "lodash-es": "^4.17.21",
-    "pwa-helpers": "^0.9.1"
+    "pwa-helpers": "^0.9.1",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "socket.io-client": "^4.0.0"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
