--- a/cs-web-app/package.json
+++ b/cs-web-app/package.json
@@ -80,6 +80,7 @@
     "lit-html": "^1.3.0",
     "lodash-es": "^4.17.21",
     "pwa-helpers": "^0.9.1",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "socket.io-client": "^4.0.0"
   },
