--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "@tsconfig/node14": "^1.0.0",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.31",
-    "@types/validator": "^13.1.3",
     "@types/redis": "^2.8.28",
     "@types/sequelize": "^4.28.9",
+    "@types/validator": "^13.1.3",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
   },
   "dependencies": {
     "@elastic/elasticsearch": "^7.11.0",
+    "@google-cloud/translate": "^6.1.0",
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
