--- a/cs-web-app/package.json
+++ b/cs-web-app/package.json
@@ -82,7 +82,8 @@
     "pwa-helpers": "^0.9.1",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "socket.io-client": "^4.0.0"
+    "socket.io-client": "^4.0.0",
+    "vanilla-picker": "^2.11.2"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
