--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   "dependencies": {
     "@elastic/elasticsearch": "^7.11.0",
     "@google-cloud/translate": "^6.1.0",
+    "@types/express-session": "^1.17.3",
+    "connect-redis": "^5.1.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "redis": "^3.0.2",
