--- a/cs-web-app/tsconfig.json
+++ b/cs-web-app/tsconfig.json
@@ -6,6 +6,7 @@
     "noEmitOnError": true,
     "lib": ["es2017", "dom"],
     "strict": true,
+    "allowJs": true,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
