--- a/cs-web-app/tsconfig.json
+++ b/cs-web-app/tsconfig.json
@@ -16,5 +16,6 @@
     "inlineSources": true,
     "rootDir": "./",
   },
-  "include": ["**/*.ts"]
+  "include": ["**/*.ts"],
+  "importHelpers": true,
 }
